2014-02-09  Carl Hetherington  <cth@carlh.net>

	* Possibly fix repeated no route to host errors in some cases.

	* Some small bits of increased low-memory stability.

	* Version 1.64.7 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Fix exception when seeking with missing content (part of #317).

	* Version 1.64.6 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.5 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.4 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.3 released.

2014-02-08  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version to get some fixes for Interop XML.

2014-02-07  Carl Hetherington  <cth@carlh.net>

	* Add basic stuff to build RPMs for Centos.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.2 released.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* A variety of fixes to small problems found by Coverity.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.1 released.

2014-02-05  Carl Hetherington  <cth@carlh.net>

	* Updates to it_IT translation from William Fanelli.

2014-02-02  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.0 released.

2014-01-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.63.8 released.

2014-01-29  Carl Hetherington  <cth@carlh.net>

	* Add subtitle X offset option.

	* Fix missing subtitles when subtitled content is at a non-zero position.

2014-01-28  Carl Hetherington  <cth@carlh.net>

	* Use Mbit/s instead of the incorrect MBps.

	* Version 1.63.7 released.

2014-01-28  Carl Hetherington  <cth@carlh.net>

	* Try to prevent Windows machines going to sleep during encodes.

	* Add option to not install main program / server on Windows.

2014-01-26  Carl Hetherington  <cth@carlh.net>

	* Change default JPEG2000 bandwith to 100MBps.

	* Updated fr_FR translation from Theirry Journet.

2014-01-24  Carl Hetherington  <cth@carlh.net>

	* Try to fix repeatedly-reported exceptions.
